# agent-ready-python

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PROGRESS.md  README.md  RELEASE_CHECKLIST.md  agent-ready-python-design.md  modular-architecture-design.md  pyproject.toml
.github/workflows/: ci.yml
src/agent_ready_python/: __main__.py  application.py  bootstrap.py
src/agent_ready_python/adapters/: __init__.py
src/agent_ready_python/adapters/fake/: __init__.py  embeddings.py  text_generator.py
src/agent_ready_python/adapters/filesystem/: text_documents.py
src/agent_ready_python/adapters/openai_compatible/: __init__.py  text_generator.py
src/agent_ready_python/adapters/openai_compatible_embeddings/: __init__.py  provider.py
src/agent_ready_python/adapters/sqlite_artifacts/: store.py
src/agent_ready_python/assembly/: __init__.py  cli.py  models.py  service.py
src/agent_ready_python/catalog/: __init__.py
src/agent_ready_python/catalog/modules/artifacts/: module.toml
src/agent_ready_python/catalog/modules/documents/: module.toml
src/agent_ready_python/catalog/modules/embeddings/: module.toml
src/agent_ready_python/catalog/modules/llm-text/: module.toml
src/agent_ready_python/catalog/presets/: artifact-pipeline.toml  minimal.toml  rag-local.toml  retrieval.toml  text-cli.toml
src/agent_ready_python/contracts/: __init__.py
src/agent_ready_python/features/: __init__.py
src/agent_ready_python/features/artifacts/: __init__.py  errors.py  ports.py
src/agent_ready_python/features/embeddings/: settings.py
src/agent_ready_python/features/pipeline/: __init__.py  errors.py  models.py  ports.py  runner.py
src/agent_ready_python/features/retrieval/: keyword.py  models.py  semantic.py
src/agent_ready_python/features/text_generation/: settings.py
src/agent_ready_python/foundation/: logging.py  secrets.py
src/agent_ready_python/interfaces/cli/: app.py  common.py  core.py  pipeline.py  retrieval.py  text_generation.py
tests/: conftest.py  test_architecture.py  test_artifacts.py  test_assembly.py  test_cli.py  test_config.py  test_distribution.py  test_documents.py  test_embedding_adapter.py  test_fake_adapter.py  test_foundation.py  test_openai_adapter.py  test_pipeline.py  test_retrieval.py
(+3 files in other folders)
