[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "agent-ready-python"
version = "0.1.0"
description = "A modular, secure Python starter for AI applications"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "spacecat398" },
]
keywords = ["python", "ai", "code generator", "project scaffold", "modular architecture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic-settings>=2.0,<3",
    "typer>=0.12,<1",
]

[project.urls]
Homepage = "https://github.com/spacecat398/agent-ready-python"
Documentation = "https://github.com/spacecat398/agent-ready-python#readme"
Repository = "https://github.com/spacecat398/agent-ready-python"
Issues = "https://github.com/spacecat398/agent-ready-python/issues"

[project.scripts]
ai-app = "agent_ready_python.interfaces.cli.app:main"
create-ai-app = "agent_ready_python.assembly.cli:main"

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_ready_python"]

[tool.hatch.build.targets.sdist]
include = [
    "src/agent_ready_python/**",
    "tests/**",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "RELEASE_CHECKLIST.md",
    "modular-architecture-design.md",
    "agent-ready-python-design.md",
    "pyproject.toml",
]
exclude = [
    "samples/**/.venv/**",
    "samples/**/.pytest_cache/**",
    "samples/**/.ruff_cache/**",
    "samples/**/__pycache__/**",
    "samples/**/dist/**",
    "samples/**/build/**",
    "samples/**/.env",
    "samples/**/.env.*",
    "**/.venv/**",
    "**/.pytest_cache/**",
    "**/.ruff_cache/**",
    "**/__pycache__/**",
    "**/dist/**",
    "**/build/**",
    "**/.env",
    "**/.env.*",
    "uv.lock",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
